--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,10 +8,14 @@
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "plugins": ["babel"],
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
     "rules": {
+        "no-invalid-this": 0,
+        "babel/no-invalid-this": 1
     }
 }
