--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   "author": "Prabhjot Benipal",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "^10.0.1",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "eslint-plugin-babel": "^5.3.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
-    "mongoose": "^5.5.5"
+    "mongoose": "^5.5.5",
+    "mongoose-validator": "^2.1.0",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
