--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^7.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "express": "^4.16.4",
+    "express-ip": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.5",
